Fix party invite message